--- a/app/views/static_pages/write.mobile.erb
+++ b/app/views/static_pages/write.mobile.erb
@@ -3,7 +3,7 @@
 </section>
 <label for="mydate">Some Date</label>
 
-<input name="mydate" id="mydate" type="date" data-role="datebox"
+<input name="mydate" id="mydate" type="date" data-role="datebox none"
    data-options='{"mode": "calbox"}'>
 
 
