--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -7,11 +7,13 @@
 	 
 	  <%= stylesheet_link_tag "symbol_font", media: "all" %>
 	  <%= stylesheet_link_tag "mobiletwo", media: "all" %>
+	  	<%= stylesheet_link_tag "jquery-ui-1.9.0.custom", media: "all" %>
+		<%= stylesheet_link_tag "timepicker", media: "all" %>
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
 	
 	 <%= javascript_include_tag "application" %>
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
-	<!-- <link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" />  -->
+	 <link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" />
 	<script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?v=3&sensor=true"></script>
 	
 	
@@ -29,7 +31,7 @@
 			<div data-role="navbar">
 				<ul>
 					<li><a href="<%= root_path %>"><symbol class="lsf-icon" title="list" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
-					<li><a href="b.html"><symbol class="lsf-icon" title="user" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
+					<li><a href="<%= users_path %>"><symbol class="lsf-icon" title="users" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= search_path(:mobile => 1) %>"><symbol class="lsf-icon" title="search" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= write_path(:mobile => 1) %>"><symbol class="lsf-icon" title="write" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol>
 </a></li>
