--- a/app/views/microposts/show.mobile.erb
+++ b/app/views/microposts/show.mobile.erb
@@ -6,6 +6,9 @@
         <a href="https://facebook.com/messages/<%= @micropost.user.uid %>" target="_blank" data-role="button" data-corners="false" data-shadow="false"><symbol class="lsf-icon" title="facebook" style="font-size: 120%; color: #000; text-shadow: 0px 0px 0px; font-weight: normal;"> </symbol><%= t('write_on_fb')+@micropost.user.name%></a>
      </li>
   	<li id="<%= @micropost.id %>">
+      <% if current_user?(@micropost.user) %>
+   | <%= link_to t('link.delete'), @micropost, method: :delete, :class => "btn", data: { confirm: "You sure?" }, title: @micropost.content %>
+  <% end %>
   					<div class="gravatar">
               <%= link_to gravatar_for(@micropost.user), @micropost.user %>
             </div>
@@ -22,7 +25,7 @@
   					
   						
     <li>
-      <div id="map_canvas" style="width:80%; height:250px; float: left;"></div>
+      <div id="map_canvas" style="width:85%; height:250px; float: left;"></div>
     </li><br><br><br>
     <li>
       <h2 class="comment"><%= t('justcomments') %></h2>
