--- a/app/views/users/show.mobile.erb
+++ b/app/views/users/show.mobile.erb
@@ -23,9 +23,9 @@
 	<div class="span8">
 		<% if @user.microposts.any? %>
 			<h3>Microposts (<%= @user.microposts.count %>)</h3>
-			<ol class="microposts">
+			<ul class="microposts" data-role="listview">
 				<%= render @microposts %>
-			</ol>
+			</ul>
 			<%= will_paginate @microposts %>
 		<% end %>
 	</div>
