--- a/app/views/shared/_micropost_form.mobile.erb
+++ b/app/views/shared/_micropost_form.mobile.erb
@@ -37,7 +37,7 @@
 	<br />
 	<div class="field">
 		<%= f.label t('home.micropost.when') %>
-		<%= f.text_field :datetime, :class => 'datepicker', placeholder: t('home.micropost.datetime') %>
+		<%= f.text_field :datetime, :type => 'datetime', placeholder: t('home.micropost.datetime') %>
 	</div>
 	<div style="clear: both"></div>
 	<div class="field">
