added options to navbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -327,6 +327,11 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 	left: 30px;
 }
 
+.timestamp_details {
+	color: #CCCCCC;
+	float: right;
+}
+
 .gravatar {
 	float: left;
 	margin-right: 10px;
