--- a/app/views/static_pages/search.mobile.erb
+++ b/app/views/static_pages/search.mobile.erb
@@ -51,6 +51,6 @@
 	... a great place to <b>find people</b> doing the things you love most, too!
   
 </p>It's just one click away... <br/><br />
-<%= link_to "Connect me!", "/auth/facebook", id: "sign_in", class: "btn btn-large btn-primary" %>
+<%= link_to "Connect me!", "/auth/facebook", :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %>
 </div>
 <% end %>
