--- a/app/views/static_pages/terms.mobile.erb
+++ b/app/views/static_pages/terms.mobile.erb
@@ -1,4 +1,5 @@
 <div id="terms">
+<p> ... wir haben nichts zu verbergen!<p>
 <h3>1. Gewährleistung, Haftung</h3>
 
 <h3>1.1 Gewährleistungsumfang</h3>
