--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -3,19 +3,18 @@
 <head>
 	<title><%= full_title(yield(:title)) %></title>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1.5">
+	<meta name="viewport" content="width=device-width, initial-scale=1.5, maximum-scale=1.0, user-scalable=no">
 	 
 	  <%= stylesheet_link_tag "symbol_font", media: "all" %>
 	  <%= stylesheet_link_tag "mobiletwo", media: "all" %>
-	  	<%= stylesheet_link_tag "jquery-ui-1.9.0.custom", media: "all" %>
-		<%= stylesheet_link_tag "timepicker", media: "all" %>
+	 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-	 <link rel="stylesheet" type="text/css" href="http://dev.jtsage.com/cdn/datebox/latest/jqm-datebox.min.css" />
+	
 
 	 <%= javascript_include_tag "application" %>
 	<script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
 	
-	<script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?v=3&sensor=true"></script>
+	<script type="text/javascript" src="https://maps-api-ssl.google.com/maps/api/js?v=3&sensor=false"></script>
 	
 
 
@@ -30,7 +29,8 @@
 			<%= full_title(yield(:title)) %>
 			<div data-role="navbar">
 				<ul>
-					<li><a href="<%= root_path %>"><symbol class="lsf-icon" title="list" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
+					<li><a href="<%= about_path(:mobile => 1) %>"><symbol class="lsf-icon" title="menu" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol>
+					<li><a href="<%= root_path %>"><symbol class="lsf-icon" title="tilemenu" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= users_path %>"><symbol class="lsf-icon" title="users" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= search_path(:mobile => 1) %>"><symbol class="lsf-icon" title="search" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= write_path(:mobile => 1) %>"><symbol class="lsf-icon" title="write" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol>
