--- a/app/views/microposts/_micropost.mobile.erb
+++ b/app/views/microposts/_micropost.mobile.erb
@@ -22,5 +22,7 @@
 			<%= t('micropost.posted') %> <%= time_ago_in_words(micropost.created_at) %> <%= t('micropost.ago') %>.
 		</div>
 	</a>
-	<%= link_to t('link.delete'), micropost, method: :delete, :class => "btn", data: { confirm: "You sure?" }, title: micropost.content, :'data-icon' => 'delete' %>
+	<% if current_user?(micropost.user) %>
+		<%= link_to t('link.delete'), micropost, method: :delete, :class => "btn", data: { confirm: "You sure?" }, title: micropost.content, :'data-icon' => 'delete' %>
+	<% end %>
 </li>
