--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -15,19 +15,19 @@
       <% end %>
       <li>
 	<li id="<%= @micropost.id %>">
-					<%= link_to gravatar_for(@micropost.user), @micropost.user %>
+					<%= link_to gravatar_for(@micropost.user, size: 120), @micropost.user %>
 					<span class="user">
 						<%= link_to @micropost.user.name, @micropost.user %>
 					<span class="content"><%= @micropost.content %></span>
 					
-					<span class="timestamp">
+					<span class="timestamp_details">
     <%= t('feed_item.posted') %> <%= time_ago_in_words(@micropost.created_at) %> <%= t('feed_item.ago') %>.
   </span>
 					
-
+<div style="clear: both"></div>
 						
   <li>
-    <div id="map_canvas" style="width:100%; height:450px"></div>
+    <div id="map_canvas" style="width:80%; height:350px"></div>
   </li>
   <% if @micropost.comments.count > 0 %>
     <li>
