--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,5 +1,5 @@
 <a href="<%= user_path(current_user) %>">
-	<%= gravatar_for current_user, size: 42 %>
+	<%= gravatar_for current_user, size: "110" %>
 </a>
 <h3>
 	<%= current_user.name %>
