--- a/app/views/static_pages/home.mobile.erb
+++ b/app/views/static_pages/home.mobile.erb
@@ -3,14 +3,8 @@
 <% if signed_in? %>
 <div>
 	<div data-role="controlgroup" data-type="horizontal"></div>
-    <div class="center" style="padding-left: 16%;>
-      <section>
-        <%= render 'shared/user_info' %>
-      </section>
-    </div>
-
 </div>
-<div style='clear:both;'>
+<div>
   <%= render 'shared/feed' %>
 </div>
 <% else %>
@@ -21,7 +15,7 @@
   ... a great place to <b>find people</b> doing the things you love most, too!
   
 </p>It's just one click away... <br/><br />
-<%= link_to "Connect me!", "auth/facebook", :rel =>"external" %>
+<%= link_to "Connect me!", "/auth/facebook", :rel =>"external", :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %>
 </div>
 
 <% end %>
