--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,7 @@
 <li>
-	<%= gravatar_for user, size: 52 %>
-	<%= link_to user.name, user %>
+	<%= gravatar_for user, size: 92 %>
+	<h3><%= link_to user.name, user %></h3>
+	<p>letzte Aktivität in <b><%= user.last_active %></b></p>
 	<% if current_user.admin? && !current_user?(user) %>
 	| <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
 	<% end %>
