--- a/app/views/users/index.mobile.erb
+++ b/app/views/users/index.mobile.erb
@@ -1,1 +1,10 @@
-test
+<% provide(:title, 'All users') %>
+<h2><%= t('allusers') %></h1>
+
+<%= will_paginate %>
+
+<ul class="users" data-role="listview">
+	<%= render @users %>
+</ul>
+
+<%= will_paginate %>
