--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	<aside class="span4">
 		<section>
 			<h1>
-				<%= gravatar_for @user %>
+				<%= gravatar_for @user, size: 110 %>
 				<%= @user.name %>
 			</h1>
 		</section>
@@ -41,5 +41,4 @@
 </p>It's just one click away... <br/><br />
 <%= link_to "Connect me!", "/auth/facebook", id: "sign_in", class: "btn btn-large btn-primary" %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://google.com/' %>
 <% end %>
