--- a/app/views/users/show.mobile.erb
+++ b/app/views/users/show.mobile.erb
@@ -4,7 +4,7 @@
 	<aside class="span4">
 		<section>
 			<h1>
-				<%= gravatar_for @user %>
+				<%= gravatar_for @user, size: 110 %>
 				<%= @user.name %>
 			</h1>
 		</section>
@@ -38,7 +38,6 @@
 	... a great place to <b>find people</b> doing the things you love most, too!
   
 </p>It's just one click away... <br/><br />
-<%= link_to "Connect me!", "/auth/facebook", id: "sign_in", class: "btn btn-large btn-primary" %>
+<%= link_to "Connect me!", "/auth/facebook", :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %>
 </div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://google.com/' %>
 <% end %>
