--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -25,7 +25,7 @@
 
 	<div data-role="page">
 
-		<div data-role="header" data-position="fixed">
+		<div data-role="header" data-position="fixed" data-transition="none">
 			<%= full_title(yield(:title)) %>
 			<div data-role="navbar">
 				<ul>
