follower view changed

--- a/app/views/users/_follow.mobile.erb
+++ b/app/views/users/_follow.mobile.erb
@@ -2,5 +2,5 @@
 <div>
 	<%= f.hidden_field :followed_id %>
 </div>
-<%= f.submit "Follow", :'data-ajax' => "false" %>
+<%= f.submit "Follow", :'data-ajax' => "false", :'data-corners' => 'false', :'data-shadow' => 'false' %>
 <% end %>
