--- a/app/views/users/show_follow.mobile.erb
+++ b/app/views/users/show_follow.mobile.erb
@@ -1,27 +1,20 @@
 <% provide(:title, @title) %>
 <div class="row">
-	<aside class="span4">
+	<aside>
 		<section>
 			<%= gravatar_for @user %>
 			<h1><%= @user.name %></h1>
-			<span><%= link_to "view my profile", @user %></span>
+			<span><%= link_to "view my profile", @user, :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %></span>
 			<span><b>Microposts:</b> <%= @user.microposts.count %></span>
 		</section>
 		<section>
 			<%= render 'shared/stats' %>
-			<% if @users.any? %>
-				<div class="user_avatars">
-					<% @users.each do |user| %>
-						<%= link_to gravatar_for(user, size: 30), user %>
-					<% end %>
-				</div>
-			<% end %>
 		</section>
 	</aside>
-	<div class="span8">
+	<div>
 		<h3><%= @title %></h3>
 		<% if @users.any? %>
-			<ul class="users">
+			<ul class="users" data-role="listview">
 				<%= render @users %>
 			</ul>
 			<%= will_paginate %>
