--- a/app/views/users/show.mobile.erb
+++ b/app/views/users/show.mobile.erb
@@ -2,7 +2,7 @@
 <% if signed_in? %>
 <div class="row">
 	<aside class="span4">
-		<section style="padding-bottom: 10px;">
+		<section>
 			<h1>
 				<%= gravatar_for @user, size: 110 %>
 				<%= @user.name %>
@@ -10,10 +10,10 @@
 		</section>
 		<section>
 			<%= render 'shared/stats' %>
-		</scetion>
-		<% unless current_user?(@user) %>
+		</section>
+		<% if current_user?(@user) %>
 		<section>
-			<%= link_to 'write #{ @user.name.split[0] } on <symbol class="lsf-icon" title="facebook"></symbol>"', "https://facebook.com/messages/#{@user.uid}", :target => '_blank', :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %>
+			<%= link_to "write #{ @user.name.split[0] } on Facebook", "https://facebook.com/messages/#{@user.uid}", :target => '_blank', :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %>
 		</section>
 		<% end %>
 	</aside>
