--- a/app/views/users/show.mobile.erb
+++ b/app/views/users/show.mobile.erb
@@ -11,7 +11,7 @@
 		<section>
 			<%= render 'shared/stats' %>
 		</section>
-		<% if current_user?(@user) %>
+		<% unless current_user?(@user) %>
 		<section>
 			<%= link_to "write #{ @user.name.split[0] } on Facebook", "https://facebook.com/messages/#{@user.uid}", :target => '_blank', :'data-role' => 'button', :'data-corners' => 'false', :'data-shadow' => 'false' %>
 		</section>
