icons instead webfont for noniOS

--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -27,16 +27,38 @@
 
 		<div data-role="header" data-position="fixed" data-transition="none">
 			<%= full_title(yield(:title)) %>
+			<% unless request.user_agent =~ /android|Android|bada/ %>
 			<div data-role="navbar">
 				<ul>
 					<li><a href="<%= about_path(:mobile => 1) %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="menu" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol>
 					<li><a href="<%= root_path %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="tilemenu" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= users_path %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="users" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 					<li><a href="<%= search_path(:mobile => 1) %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="search" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
-					<li><a href="<%= write_path(:mobile => 1) %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="write" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol>
-</a></li>
+					<li><a href="<%= write_path(:mobile => 1) %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="write" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol></a></li>
 				</ul>
 			</div><!-- /navbar -->
+		<% else %>
+			<!-- Navbar with Pictures instead of Webfonts -->
+			<div data-role="navbar">
+				<ul>
+					<li><a href="<%= about_path(:mobile => 1) %>" id="options" data-ajax="false">
+						<%= image_tag("options2.png", alt: "Write", width: "50%") %>
+					</a></li>
+					<li><a href="<%= root_path %>" id="options" data-ajax="false">
+						<%= image_tag("tilemenu2.png", alt: "Write", width: "50%") %>
+					</a></li>
+					<li><a href="<%= users_path %>" id="options" data-ajax="false">
+						<%= image_tag("users2.png", alt: "Write", width: "50%") %>
+					</a></li>
+					<li><a href="<%= search_path(:mobile => 1) %>" id="options" data-ajax="false">
+						<%= image_tag("search2.png", alt: "Write", width: "50%") %>
+					</a></li>
+					<li><a href="<%= write_path(:mobile => 1) %>" id="options" data-ajax="false">
+						<%= image_tag("write2.png", alt: "Write", width: "50%") %>
+					</a></li>
+				</ul>
+			</div><!-- /navbar -->
+		<% end %>
 		</div><!-- /header -->
 
 	<div data-role="content">	
