icons instead webfont for noniOS

--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -27,7 +27,7 @@
 
 		<div data-role="header" data-position="fixed" data-transition="none">
 			<%= full_title(yield(:title)) %>
-			<% if request.user_agent =~ /android|Android|bada/ %>
+			<% unless request.user_agent =~ /android|Android|bada/ %>
 			<div data-role="navbar">
 				<ul>
 					<li><a href="<%= about_path(:mobile => 1) %>" id="options" data-ajax="false"><symbol class="lsf-icon" title="menu" style="font-size: 130%; color: #FFF; margin-right: -7px;text-shadow: 0px 0px 0px;"></symbol>
