--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -52,6 +52,7 @@
 					</a></li>
 					<li><a href="<%= search_path(:mobile => 1) %>" id="options" data-ajax="false">
 						<%= image_tag("search2.png", alt: "Write", width: "50%") %>
+						<img src='/assets/search2.png' width="50%" />
 					</a></li>
 					<li><a href="<%= write_path(:mobile => 1) %>" id="options" data-ajax="false">
 						<img src='/assets/uk.png' width="50%" />
