--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -83,7 +83,7 @@
 	if (!!window.CSSFontFaceRule){
 		
 	}else{
-		document.getElementById("options").innerHTML = "<img src='/assets/uk.png' />";
+		document.getElementById("options").innerHTML = "<img src='/assets/write2.png' />";
 		
 	} 
 </script>
