--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -54,7 +54,7 @@
 						<%= image_tag("search2.png", alt: "Write", width: "50%") %>
 					</a></li>
 					<li><a href="<%= write_path(:mobile => 1) %>" id="options" data-ajax="false">
-						<%= image_tag("write2.png", alt: "Write", width: "50%") %>
+						<%= image_tag("write.png", alt: "Write", width: "50%") %>
 					</a></li>
 				</ul>
 			</div><!-- /navbar -->
