--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -305,7 +305,12 @@ document.forms['new_micropost'].elements['micropost[latlng]'].value = '(50.29792
   <% else %>
 
   <% end %> 
-
+<%= link_to "Tour Start", "#", id: "tourstart", class: "btn btn-large btn-primary" %>
+<div id="tourdiv"><div id='tourwrapper'>
+  <div id="tourpic" style="position: relative;"><%= image_tag "Tour1.png" %></div>
+  <%= link_to "next", "#", id: "tournext", class: "btn btn-large" %>
+  <%= link_to "back", "#", id: "tourback", class: "btn btn-large" %></div>
+</div>
 <%= image_tag "connectifybanner2.jpg" %><br>
 <a href="#" id="show_whatfbknows" style="
     float: left;
@@ -327,10 +332,65 @@ document.forms['new_micropost'].elements['micropost[latlng]'].value = '(50.29792
 
 <script>
 $(document).ready(function() {
+
+  var i;
+  var j;
+
   $('#show_whatfbknows').click( function(event) {
       event.preventDefault();
       $('#whatfbknows').fadeIn();
   })
+
+  $('#tourdiv').hide();
+  $('#tourback').hide();
+
+  $('#tourstart').click( function(event) {
+      event.preventDefault();
+      $('#tourdiv').fadeIn();
+      i = 2;
+      j = 0;
+  });
+
+  $('#tournext').click( function(event) {
+    event.preventDefault();
+    var k = i;
+    if (i == 6) {
+        $('#tournext').fadeOut();
+        j = 7;
+      }
+    i = i+1;
+    j = j+1;
+      if (i >= 2) {
+        $('#tourback').fadeIn();
+      }
+    $('#tourpic').hide().html( function(){
+      var image = '<img src="/assets/Tour'+k+'.png" />';
+      
+      return image;
+    }).fadeIn(1300);    
+  });
+
+  $('#tourback').click( function(event) {
+    if (j == 0){
+      return false;
+    }
+    event.preventDefault();
+    if (j == 1) {
+        $('#tourback').fadeOut();
+        i = 1;
+      }
+      var k = j;
+      j = j-1;
+      i = i-1;
+      if (i == 6) {
+        $('#tournext').fadeIn();
+      }
+    $('#tourpic').hide().html( function(){
+      var image = '<img src="/assets/Tour'+k+'.png" />';
+      
+      return image;
+    }).fadeIn(1300);    
+  });
 
 });
 
