--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,8 +114,8 @@ line-height: 2.7em;
 
 #usertimeline {
 	width: 100%;
-	background: #F3F2F2;
-	height: 100px;
+	background: #FFF;
+	height: 150px;
 	margin-top: 40px;
 	overflow: hidden;
 }
