--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -143,7 +143,7 @@ letter-spacing: -1px;
 padding-top: 0px;
 font-weight: bold;
 line-height: 1;
-max-width: 41px;
+max-height: 41px;
 &:hover {
 color: white;
 text-decoration: none;
